samples/positive/unused/resources/512/28.woff2
version https://git-lfs.github.com/spec/v1
oid sha256:eadcaf5848212acfce3096334b3f6e7256006dc08c4f22a0ad75b3f8f54d4abe
size 32516
