samples/negative/resources/fp54/3.woff2
version https://git-lfs.github.com/spec/v1
oid sha256:75dceb1952ced6dab35cf68d3b6bf2f3d2ee9dd7b799ef2b5efb39323d093cc4
size 22128
